# monkey_dust_tools

./: .gitignore  CLAUDE_TOOLS.md  CMakeLists.txt  README.md  flare_2d_render.py  gen_pom_detail.py  hunyuan_world_colab.ipynb  md_biome_import.py  md_convert.py  md_extract_terrain.py  md_heightmap_import.py  md_master_hmap_gen.py  md_mod_import.py  md_re_extract.py  md_re_structure.py  md_stitch_terrain.py  morph_extractor_a.py  morph_gen_b.py  tif_to_r32.py
editor/: bug_capture.h  char_preview_gl.h  character_editor.h  editor_3d_bridge.h  editor_animation_panel.cpp  editor_animation_panel.h  editor_asset_browser.cpp  editor_asset_browser.h  editor_camera_panel.cpp  editor_camera_panel.h  editor_char_preview_game.h  editor_char_preview_sdlgpu.h  editor_command_palette.cpp  editor_command_palette.h  editor_console.cpp  editor_console.h  editor_core.cpp  editor_core.h  editor_director_panel.cpp  editor_director_panel.h  editor_flare_browser.cpp  editor_flare_browser.h  editor_flowgraph_panel.cpp  editor_flowgraph_panel.h  editor_game_context.h  editor_gpu_profiler_panel.cpp  editor_gpu_profiler_panel.h  editor_graphics_panel.cpp  editor_graphics_panel.h  editor_hierarchy.cpp  editor_hierarchy.h  editor_history.h  editor_hmap_2d.h  editor_inspector.cpp  editor_inspector.h  editor_layout.h  editor_map_view.cpp  editor_map_view.h  editor_node_graph.cpp  editor_node_graph.h  (+23 more)
flare_convert/: flare_convert_main.cpp  flare_ini_converter.cpp  flare_ini_converter.h  kenshi_data_parser.h
flare_demo/: main.cpp
kenshi_mesh_conv/: kenshi_chars.py  ogre2glb.py
kenshi_terrain/: kenshi2terrain.py
md_mesh_conv/: md_chars.py  merge_body_morphs.py
md_terrain/: md2terrain.py
ozz_bake/: main.cpp
qa/captures/20260523_190051/: demo.mkv
qa/captures/20260528_020404/: demo.mkv
qa/captures/20260528_023353/: demo.mkv
qa/captures/20260528_025109/: demo.mkv
re_analysis/: re_ai_struct_targeted.py  re_char_editor_trace.py  re_kenshi_charstruct.py  re_level1.py  re_level2_callgraph.py  re_level3_struct.py
scripts/: fetch_terrain_textures.py
